--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ flask-mongoengine = "*"
 numpy = "*"
 sklearn = "*"
 flask-cors = "*"
+flask-uploads = "*"
+tensorflow = "*"
+matplotlib = "*"
+scikit-image = "*"
 
 [dev-packages]
 
